--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -214,8 +214,7 @@
          So wird die Differenz zwischen zwei Winkeln $\theta_{1}$ und $\theta_{2}$ wie gehabt berechnet: $\Delta\theta = \theta_{1} - \theta_{2}$.
          Jedoch benötigt man weitere Rechenregeln, um mit Winkeln rechnen zu können.
         \\
-        \begin{Theorem}
-            \underline{Relation de Chasles}: \\\\
+        \begin{Theorem}[- Relation de Chasles]
             $(\vv{u},\vv{w})+(\vv{w},\vv{v})=(\vv{u},\vv{v});\quad modulo\quad 2\pi$ \\\\
             \underline{Umformungen}: \\
             \begin{enumerate}[(1)]
@@ -1278,9 +1277,8 @@
         Es sticht einem schnell ins Auge, dass dies ein großer Aufwand ist. Tatsächlich gibt es einen für das Abitur zugelassenen
         schnelleren Lösungsweg: die \textbf{Hess'sche Normalenform}.
         \\
-        \begin{Definition}
-            \underline{Hess'sche Normalenform}:
-            \\ Die Hess'sche Normalenform ist eine besondere Normalenform einer Ebene, dadurch besonders, dass der Normalenvektor
+        \begin{Definition}[- Hess'sche Normalenform]
+            Die Hess'sche Normalenform ist eine besondere Normalenform einer Ebene, dadurch besonders, dass der Normalenvektor
             normiert ist. Sie lässt sich wie folgt ableiten:
             $E_h: \dfrac{\textcolor{red}{\vv{n}} \odot [\vv{x} - \textcolor{blue}{\vv{q}}]}{|\textcolor{red}{\vv{n}}|} = 0$
         \end{Definition}
