--- a/kap5/saetze.tex
+++ b/kap5/saetze.tex
@@ -1,6 +1,89 @@
 \subsection{Sätze des Pythagoras}
+\begin{Theorem}
+  \begin{minipage}{0.5\textwidth}
+    In einem rechtwingkligen Dreieck $\Delta ABC$ gilt:\\
+    $$a^2+b^2=c^2$$
+  \end{minipage}
+  \begin{minipage}{0.5\textwidth}
+
+  \end{minipage}
+\end{Theorem}
+\begin{Beweis}
+  test
+\end{Beweis}
+Die Umkehrung dieses Satzes:
+\begin{Theorem}
+  \begin{minipage}{0.5\textwidth}
+    Falls für ein Dreieck $\Delta ABC$ gilt:\\
+    $$a^2+b^2=c^2$$
+    Dann ist dieses Dreieck in $C$ rechtwinklig.
+  \end{minipage}
+  \begin{minipage}{0.5\textwidth}
+    draw
+  \end{minipage}
+\end{Theorem}
+\begin{Beweis}
+  test
+\end{Beweis}
+
 \subsection{Euklids Sätze}
+\begin{Theorem}{- Höhensatz}
+  \begin{minipage}{0.5\textwidth}
+  In einem in $C$ rechtwinkligen Dreieck $\Delta ABC$ mit $h$ der Höhe zu $C$ gilt:\\
+    \begin{itemize}
+      \item a^2 = p \cdot c\\
+      \item b^2 = q \cdot c
+    \end{itemize}
+  \end{minipage}
+  \begin{minipage}{0.5\textwidth}
+
+  \end{minipage}
+\end{Theorem}
+\begin{Beweis}
+  test
+\end{Beweis}
+\begin{Theorem}
+  \begin{minipage}{0.5\textwidth}
+  Sei ein Dreieck $\Delta ABC$ mit M einem Punkt der Geraden $(AB)$ und N einem Punkt der Geraden $(AC)$. Wenn gilt:\\
+  $$\dfrac{AB}{AC}=\dfrac{AM}{AN}$$
+    Dann ist $(BC)//(MN)$.
+  \end{minipage}
+  \begin{minipage}{0.5\textwidth}
+    draw
+  \end{minipage}
+\end{Theorem}
+\begin{Beweis}
+  test
+\end{Beweis}
+
 \subsection{Strahlensätze}
+\begin{Theorem}
+  \begin{minipage}{0.5\textwidth}
+    Sei ein Dreieck $\Delta ABC$ mit M einem Punkt der Geraden $(AB)$ und N einem Punkt der Geraden $(AC)$. Wenn $(BC)//(MN)$, dann gilt:\\
+    $$\dfrac{AM}{AB}=\dfrac{AN}{AC}=\dfrac{MN}{BC}$$
+  \end{minipage}
+  \begin{minipage}{0.5\textwidth}
+
+  \end{minipage}
+\end{Theorem}
+\begin{Beweis}
+  test
+\end{Beweis}
+Die Umkehrung dieses Satzes:
+\begin{Theorem}
+  \begin{minipage}{0.5\textwidth}
+  Sei ein Dreieck $\Delta ABC$ mit M einem Punkt der Geraden $(AB)$ und N einem Punkt der Geraden $(AC)$. Wenn gilt:\\
+  $$\dfrac{AB}{AC}=\dfrac{AM}{AN}$$
+    Dann ist $(BC)//(MN)$.
+  \end{minipage}
+  \begin{minipage}{0.5\textwidth}
+    draw
+  \end{minipage}
+\end{Theorem}
+\begin{Beweis}
+  test
+\end{Beweis}
+
 \subsection{Der Satz des Apollinius}
 \begin{Definition}
   \begin{minipage}[t]{0.5\textwidth}
