Beweis und Anfang Gauß'sche Zahlenebene

--- a/main.tex
+++ b/main.tex
@@ -28,10 +28,11 @@
 \usepackage{tkz-tab}                              %Für Monotonietabellen??
 \usepackage{marvosym}                             %Symbole wie Blitze und co. ...
 \usepackage{stackengine}                          %Wofür sind die nächsten 4 imports?
-%\usepackage{scalerel}				
+%\usepackage{scalerel}
 %\usepackage{xcolor}
 \usepackage{epigraph}                             %FÜrs Titelblatt
 \usepackage{array}			%Gleichungen mit mehr als einem Zeichen in der Zeile oder Tabellen
+\usepackage{gensymb}        %"Grad Celsius"(°)- Zeichen mit \degree
 
 %\pgfplotsset{compat=1.15}
 \usetikzlibrary{arrows}
