Klitzekleine Änderungen. Für die Vektoren: kann gerne Rückgängig gemacht werden.

--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
 \usepackage{tkz-tab}                              %Für Monotonietabellen??
 \usepackage{marvosym}                             %Symbole wie Blitze und co. ...
 \usepackage{stackengine}                          %Wofür sind die nächsten 4 imports?
-%\usepackage{scalerel}				
+%\usepackage{scalerel}
 %\usepackage{xcolor}
 \usepackage{epigraph}                             %FÜrs Titelblatt
 \usepackage{array}			%Gleichungen mit mehr als einem Zeichen in der Zeile oder Tabellen
@@ -54,6 +54,7 @@
 \include{style}
 \begin{document}
 \include{title}
+\parindent0mm
 
 
 \begin{small}
