--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -160,49 +160,48 @@
 
 
     \subsection{Orientierte Winkel}
+        Wenn man in der Mathematik mit Winkeln arbeitet, werden sie immer im \textbf{mathematisch positiven} Sinn angegeben.
+        Dies bedeutet, dass man von einem Vektor oder Schenkel, der an den Winkel grenzt, ausgeht und über Rotation um den Schnittpunkt \glqq gegen
+        den Uhrzeigersinn\grqq \,zum anderen gelangt, bis beide übereinanderliegen (wenn man davon ausgeht, dass sich beide schneiden).\\
+        \begin{minipage}{0.5\textwidth}
+          \definecolor{qqwuqq}{rgb}{0,0.4,0}
+          \definecolor{ududff}{rgb}{0.3,0.3,1}
+          \begin{tikzpicture}[>=triangle 45]
+              \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.1] (0,0) -- (1.3,-0.75) arc (-30:30:1.5) -- cycle;
+              \draw [->,line width=0.8pt,color=qqwuqq] (1.3,-0.75) arc (-30:30:1.5);
+              \draw [->,line width=0.8pt] (0,0) -- (5.2,3);
+              \draw [->,line width=0.8pt] (0,0) -- (5.2,-3);
+              \draw [fill=ududff] (5.2,3) circle (1.5pt);
+              \draw[color=ududff] (5.4,3.2) node {$A$};
+              \draw [fill=ududff] (0,0) circle (1.5pt);
+              \draw[color=ududff] (-0.3,0.1) node {$B$};
+              \draw [fill=ududff] (5.2,-3) circle (1.5pt);
+              \draw[color=ududff] (5.4,-3.2) node {$C$};
+              \draw[color=qqwuqq] (0.9,0) node {$\alpha$};
+              \draw[color=black] (2.6,-1.7) node {$c$};
+              \draw[color=black] (2.6,1.7) node {$a$};
+          \end{tikzpicture}
+        \end{minipage}
+        \begin{minipage}{0.5\textwidth}
+          \definecolor{ududff}{rgb}{0.3,0.3,1}
+          \definecolor{adadff}{rgb}{0.8,0.8,0}
+          \begin{tikzpicture}[>=triangle 45]
+              \draw [line width=0.8pt,color=adadff,fill=adadff,fill opacity=0.1] (0,0) -- (1.3,-0.75) arc (-30:30:1.5) -- cycle;
+              \draw [<-,line width=0.8pt,color=adadff] (1.3,-0.75) arc (-30:30:1.5);
+              \draw [->,line width=0.8pt] (0,0) -- (5.2,3);
+              \draw [->,line width=0.8pt] (0,0) -- (5.2,-3);
+              \draw [fill=ududff] (5.2,3) circle (1.5pt);
+              \draw[color=ududff] (5.4,3.2) node {$A$};
+              \draw [fill=ududff] (0,0) circle (1.5pt);
+              \draw[color=ududff] (-0.3,0.1) node {$B$};
+              \draw [fill=ududff] (5.2,-3) circle (1.5pt);
+              \draw[color=ududff] (5.4,-3.2) node {$C$};
+              \draw[color=qqwuqq] (0.9,0) node {$\alpha$};
+              \draw[color=black] (2.6,-1.7) node {$c$};
+              \draw[color=black] (2.6,1.7) node {$a$};
+          \end{tikzpicture}
+        \end{minipage}
 
-        \paragraph{} Wenn man in der Mathematik mit Winkeln arbeitet, werden sie immer im \textbf{mathematisch positiven} Sinn angegeben.
-        Dies bedeutet, dass man von einem Vektor oder Schenkel,
-        \begin{wrapfigure}[14]{r}{0.4\textwidth}
-            \definecolor{qqwuqq}{rgb}{0,0.4,0}
-            \definecolor{ududff}{rgb}{0.3,0.3,1}
-            \begin{tikzpicture}[>=triangle 45]
-                \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.1] (0,0) -- (1.3,-0.75) arc (-30:30:1.5) -- cycle;
-                \draw [->,line width=0.8pt,color=qqwuqq] (1.3,-0.75) arc (-30:30:1.5);
-                \draw [->,line width=0.8pt] (0,0) -- (5.2,3);
-                \draw [->,line width=0.8pt] (0,0) -- (5.2,-3);
-                \draw [fill=ududff] (5.2,3) circle (1.5pt);
-                \draw[color=ududff] (5.4,3.2) node {$A$};
-                \draw [fill=ududff] (0,0) circle (1.5pt);
-                \draw[color=ududff] (-0.3,0.1) node {$B$};
-                \draw [fill=ududff] (5.2,-3) circle (1.5pt);
-                \draw[color=ududff] (5.4,-3.2) node {$C$};
-                \draw[color=qqwuqq] (0.9,0) node {$\alpha$};
-                \draw[color=black] (2.6,-1.7) node {$c$};
-                \draw[color=black] (2.6,1.7) node {$a$};
-            \end{tikzpicture}
-        \end{wrapfigure}
-        der an den Winkel grenzt, ausgeht und über Rotation um den Schnittpunkt \glqq gegen
-        den Uhrzeigersinn\grqq zum anderen gelangt, bis beide übereinanderliegen (wenn man davon ausgeht, dass sich beide schneiden).
-        %\begin{wrapfigure}[14]{l}{0.4\textwidth}
-            \definecolor{ududff}{rgb}{0.3,0.3,1}
-            \definecolor{adadff}{rgb}{0.8,0.8,0}
-            \begin{tikzpicture}[>=triangle 45]
-                \draw [line width=0.8pt,color=adadff,fill=adadff,fill opacity=0.1] (0,0) -- (1.3,-0.75) arc (-30:30:1.5) -- cycle;
-                \draw [<-,line width=0.8pt,color=adadff] (1.3,-0.75) arc (-30:30:1.5);
-                \draw [->,line width=0.8pt] (0,0) -- (5.2,3);
-                \draw [->,line width=0.8pt] (0,0) -- (5.2,-3);
-                \draw [fill=ududff] (5.2,3) circle (1.5pt);
-                \draw[color=ududff] (5.4,3.2) node {$A$};
-                \draw [fill=ududff] (0,0) circle (1.5pt);
-                \draw[color=ududff] (-0.3,0.1) node {$B$};
-                \draw [fill=ududff] (5.2,-3) circle (1.5pt);
-                \draw[color=ududff] (5.4,-3.2) node {$C$};
-                \draw[color=qqwuqq] (0.9,0) node {$\alpha$};
-                \draw[color=black] (2.6,-1.7) node {$c$};
-                \draw[color=black] (2.6,1.7) node {$a$};
-            \end{tikzpicture}
-        %\end{wrapfigure}
         So ergibt sich $\alpha = \angle ABC = \angle ac = (\vv{BA},\vv{BC}) = \frac{\pi}{3}$. Ein Winkel $\alpha$ wird zudem immer so angegeben, dass $\alpha\in I; I = [-\pi,\pi]$ gilt.
         Dies bedeutet, dass man nur Winkel zwischen $0°$ und $180°$ erhält, und das in beide \glqq Richtungen\grqq, als im mathematisch positiven und negativen Sinn.
         Diese Einschränkung kennzeichnet man mit dem Ausdruck \glqq \textbf{modulo $2\pi$}\grqq.
@@ -228,9 +227,7 @@
             \end{enumerate}
         \end{Theorem}
 
-        \\
-        \\
-        \\
+        \vspace{1cm}
 
         \begin{minipage}{0.45\textwidth}
             \definecolor{qqttqq}{rgb}{0,0.2,0}
