--- a/style.tex
+++ b/style.tex
@@ -1,37 +1,14 @@
-%Kapitel-Titelblatt
-\makeatletter
-\def\thickhrulefill{\leavevmode \leaders \hrule height 1.2ex \hfill \kern \z@}
-\def\@makechapterhead#1{
-  \vspace*{10\p@}%
-  {\parindent \z@ \centering \reset@font
-        \thickhrulefill\quad
-        \huge\scshape\bfseries\textit{\@chapapp{}  \thechapter}\normalsize
-        \quad \thickhrulefill
-        \par\nobreak
-        \vspace*{10\p@}%
-        \interlinepenalty\@M
-        \hrule
-        \vspace*{10\p@}%
-        \Huge \bfseries #1 \par\nobreak
-        \par
-        \vspace*{10\p@}%
-        \hrule
-        \vskip 50\p@
-  }}
-
-\setlength{\mathindent}{0pt}
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Eigene Environments
 %Beweis:
 \newenvironment{Beweis}[1][]
   {\begin{tcolorbox}[colback=gray!5!white,colframe=gray!70!black,opacityframe=0.5, opacitybacktitle=0.5,sharpish corners,boxrule=0pt,frame hidden,title=Beweis \,#1,breakable,break at=23cm,pad at break=1mm,]}
   {\hfill\ensuremath{\square} \end{tcolorbox}}
 
-
 %Definition:
 \newenvironment{Definition}[1][]
   {\begin{tcolorbox}[colback=red!7!white,colframe=red!70!black,sharpish corners,boxrule=0pt,frame hidden,title=Definition \,#1]}
   {\end{tcolorbox}}
-
 
 %Theorem:
 \newenvironment{Theorem}[1][]
@@ -51,7 +28,6 @@
    ]\underline{Beispiel:}\\}
 {\end{mdframed}}
 
-
 %Bemerkung
 \newenvironment{Bemerkung}
   {\par\noindent\normalfont\par\nopagebreak%
@@ -64,7 +40,6 @@
      skipabove=.5\baselineskip
    ]\underline{Bemerkung:}\\}
 {\end{mdframed}}
-
 
 %GTR-Tipp
 \newenvironment{GTR-Tipp}
@@ -79,8 +54,7 @@
    ]\underline{GTR-Tipp:}\\}
 {\end{mdframed}}
 
-
-%Codebox, aufrufbar mit \begin{lstlisting}[typ_der_Sprache]
+%Codebox, aufrufbar mit \begin{lstlisting}[Name_der_Sprache]
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
@@ -108,16 +82,49 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\Q}{\mathbb{Q}}
-\newcommand{\zz}{\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}}}   % "zu zeigen"-Zeichen mit \zz Quelle: http://www.matheboard.de/archive/155832/thread.html
-\newcommand\danger[1][2ex]{%
-  \renewcommand\stacktype{L}%
-  \scaleto{\stackon[1.3pt]{\color{red}$\triangle$}{\tiny !}}{#1}   % Achtung Zeichen mit \danger
+% "zu zeigen"-Zeichen mit \zz Quelle: http://www.matheboard.de/archive/155832/thread.html
+\newcommand{\zz}{\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}}}
+% Achtung Zeichen mit \danger
+\newcommand\danger[1]{
+  \renewcommand\stacktype{L}
+  \scaleto{\stackon[1.3pt]{\color{red}$\triangle$}{\tiny !}}{#1}
 }
+%Logarithmus dualis als "operator" angesehen mit \ld
+\DeclareMathOperator{\ld}{ld}
+%(Linke Seite)"Per definitionem äquivalent zu" (Ist halt die Frage, ob ich das richtig nutze)
+\newcommand{\logEqL}{\ratio\Leftrightarrow}
+%(Rechte Seite)"Per definitionem äquivalent zu"
+\newcommand{\logEqR}{\Leftrightarrow\ratio}
+%Linke Seite wird definiert zu / durch rechte Seite
+\newcommand{\definedBy}{\ratio=}
 
-\DeclareMathOperator{\ld}{ld}			%Logarithmus dualis als "operator" angesehen mit \ld
-\newcommand{\logEqL}{\ratio\Leftrightarrow}  %(Linke Seite)"Per definitionem äquivalent zu" (Ist halt die Frage, ob ich das richtig nutze)
-\newcommand{\logEqR}{\Leftrightarrow\ratio}  %(Rechte Seite)"Per definitionem äquivalent zu"
-\newcommand{\definedBy}{\ratio=}             %Linke Seite wird definiert zu / durch rechte Seite
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Kapitel-Titelblatt
+\makeatletter
+\def\thickhrulefill{\leavevmode \leaders \hrule height 1.2ex \hfill \kern \z@}
+\def\@makechapterhead#1{
+  \vspace*{10\p@}%
+  {\parindent \z@ \centering \reset@font
+        \thickhrulefill\quad
+        \huge\scshape\bfseries\textit{\@chapapp{}  \thechapter}\normalsize
+        \quad \thickhrulefill
+        \par\nobreak
+        \vspace*{10\p@}%
+        \interlinepenalty\@M
+        \hrule
+        \vspace*{10\p@}%
+        \Huge \bfseries #1 \par\nobreak
+        \par
+        \vspace*{10\p@}%
+        \hrule
+        \vskip 50\p@
+  }}
+
+\setlength{\mathindent}{0pt}
+\makeatother
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Für den Titel:
 \renewcommand\epigraphflush{flushright}
@@ -178,3 +185,45 @@
 \end{scope}
 \end{tikzpicture}%
 }
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Fürs Inhaltsverzeichnis:
+\contentsmargin{0cm}
+\titlecontents{chapter}[0pc]
+{\addvspace{5pt}%
+\begin{tikzpicture}[remember picture, overlay]%
+\draw[fill=titlepagecolor,draw=titlepagecolor, rounded corners] (-4,-.1) rectangle (.5,.5);%
+\pgftext[left,x=-1.9cm,y=0.2cm]{\color{white}\Large \chaptertitlename\ \thecontentslabel};%
+\end{tikzpicture}\hspace{1cm}\color{titlepagecolor}\large\bfseries}%
+{}
+{}
+{\hspace*{20pt}\titlerule\hspace*{20pt}\large\bfseries \thecontentspage
+\begin{tikzpicture}[remember picture, overlay]
+\draw[fill=doc!25,draw=titlepagecolor, rounded corners=0pt] (2pt,0) rectangle (6,0.1pt);
+\end{tikzpicture}}%
+\titlecontents{section}[2.6pc]
+{\addvspace{1pt}}
+{\contentslabel[\thecontentslabel]{2.4pc}}
+{}
+{\dotfill\small \thecontentspage}
+[]
+\titlecontents{subsection}[5.2pc]
+{\addvspace{1.0pt}}
+{\contentslabel[\thecontentslabel]{2.4pc}}
+{}
+{\dotfill\small\thecontentspage}
+[]
+
+\makeatletter
+\renewcommand{\tableofcontents}{%
+\chapter*{%
+\vspace*{-20\p@}%
+\begin{tikzpicture}[remember picture, overlay]%
+\pgftext[right,x=15cm,y=0.2cm]{\color{titlepagecolor}\Huge \contentsname};%
+\draw[fill=titlepagecolor,draw=titlepagecolor, rounded corners=15pt] (13,-.75) rectangle (20,1);%
+\clip (13,-.75) rectangle (20,1);
+\pgftext[right,x=15cm,y=0.2cm]{\color{white}\Huge \contentsname};%
+\end{tikzpicture}}%
+\@starttoc{toc}}
+\makeatother
