Physik: Stand Sommerferien

--- a/kap15/kap15.tex
+++ b/kap15/kap15.tex
@@ -392,23 +392,52 @@ Bien que $T_{0}$ est aussi proportionnel à l'amplitude $\theta$, ce facteur peu
 La période propre d'un pendule élastique horizontal non amorti est :
 $$T_{0}=2\pi\sqrt{\dfrac{m}{k}}$$
 
+On remarque que la \textbf{pulsation propre} $\omega_{0}$ d'un pendule élastique horizontal non amorti est un peu comme la vitesse angulaire pour un oscillateur:
+$$\omega_{0}=\dfrac{2\pi}{T_{0}}=\sqrt{\dfrac{k}{m}}$$
+
+Dans le cas d'un système oscillant amorti, on distingue entre un régime \textbf{pseudo-périodique} et un régime \textbf{apériodique} (aucune oscillation)
+
 \end{Definition}
 
 
 
+\section{Oscillateurs mécaniques en régime forcé}
+
+\begin{Definition}
+
+La bande passante est l'intervalle des fréquences pour lesquelles le résonnateur donne une réponse importante en amplitude. Elle est déterminable sur le graphique de l'amplitude en fonction de la fréquence. On fait $\dfrac{X_{mres}}{\sqrt{2}}$ et on retrouve la largeur de la bande passante $\Delta f = f_{2} - f_{1}$. Il en résulte le facteur de qualité $Q$:
+$$Q=\dfrac{f_{res}}{\Delta f} \approx \dfrac{f_{0}}{f_{2}-f_{1}} $$  
+
+\end{Definition}
 
 
 
+\section{Émission, propagation et réception des ondes}
+
+\begin{Definition}
+
+La célérité (vitesse de propagation) de l'onde est constante dans un milieu non dispersif.
+$$v=\dfrac{d}{\Delta t} = \dfrac{\lambda}{T} = \lambda \cdot f$$
+
+Une onde est périodique dans l'espace et dans le temps. Dans un moment donné, les points $P_{1}$ et $P_{2}$ du milieu (en gros, deux courbes d'onde) sont en phase si 
+$$d(P_{1};P_{2})=k\cdot\lambda\quad;k\in\Z$$
+et ils sont en opposition de phase si
+$$d(P_{1};P_{2})=(2k+1)\cdot\dfrac{\lambda}{2};\quadk\in\Z$$
+
+L'indice de réfraction $n$ et la célérité des ondes électromagnétiques sont proportionnels:
+$$v$$
+\end{Definition}
 
 
+\section{Difffraction des ondes}
 
+\begin{Definition}
 
+Il y a seulement diffraction si l'obstacle de l'onde a une dimension du même ordre de grandeur que celle-ci.\\
+L'écart angulaire pour la diffraction par une fente est, avec $a$ largeur de la fente, $\theta$, mesuré entre le milieu de la tache centrale et la première extinction:
+$$\theta=\dfrac{\lambda}{a}$$
 
-
-
-
-
-
+\end{Definition}
 
 
 
