--- a/kap6/kap6.tex
+++ b/kap6/kap6.tex
@@ -149,25 +149,60 @@
 	\\
 	\begin{center}
 		\begin{tikzpicture}[>=triangle 45]
-			\draw[->,line width=0.8pt] (-5.5,0) -- (6,0);
+			\draw[->,line width=0.8pt] (-5.5,0) -- (6,0) node[above] {$Re(z)$};
 			\foreach  \x in {-5,...,5}
-    			\draw (\x,0.2) -- (\x,-0.2) node[below] {\x};
+    			\draw (\x,0.2) -- (\x,-0.2) node[below] {$\x$};
 			\draw[->,line width=0.8pt,color=red] (0,0) -- (3,0);
 		\end{tikzpicture}
 	\end{center}
 	\\
-	\paragraph{} Zunächst muss verstanden werden, welche Transformation jeweils Addition und Multiplikation im $\R^1$ auf reelle Zahlen ausführt:
+	\paragraph{} Zunächst muss verstanden werden, welche Transformation jeweils Addition und Multiplikation im $\R^1$ auf reelle Zahlen ausführt. Das lässt sich am einfachsten anhand einer Graphik erklären:
 	\\
 	\begin{center}
 		\begin{tikzpicture}[>=triangle 45]
-			\draw[->,line width=0.8pt] (-5.5,0) -- (6,0);
+			\draw[->,line width=0.8pt] (-5.5,0) -- (6,0) node[above] {$Re(z)$};
 			\foreach  \x in {-5,...,5}
-    			\draw (\x,0.2) -- (\x,-0.2) node[below] {\x};
-			\draw[->,line width=1.3pt,color=red,dashed] (0,0) -- (3.3,0);
-			\draw[->,line width=1.3pt,color=red] (0,0) -- (-3.3,0);
-			\draw[line width=1.3pt,color=red] (1.5,0.6) node {3};
-			\draw[line width=1.3pt,color=red] (-1.5,0.6) node {-3};
-			\draw[->,color=red] (2.7,0) arc (0:180:2.7);
-			\draw[line width=0.8pt,color=red] (0,3) node {180 \degree};
+    			\draw (\x,0.2) -- (\x,-0.2) node[below] {$\x$};
+			\draw[->,line width=1.5pt,color=red] (0,0) -- (-3,0);
+			\draw[->,line width=1.5pt,color=orange] (0,0) -- (4,0);
+			\draw[->,line width=1.5pt,color=red,dashed] (0,0) -- (3,0);
+			\draw[->,line width=1.5pt,color=orange,dashed] (0,0) -- (2,0);
+			\draw[line width=1.3pt,color=red] (1.5,0.4) node {3};
+			\draw[line width=1.3pt,color=red] (-1.5,0.4) node {-3};
+			\draw[->,color=red] (2.4,0) arc (0:180:2.4);
+			\draw[line width=2pt,color=white] (1.84,1.54) arc (40:55:2.4);
+			\draw[->,color=orange] (0.3,0) arc (180:0:1.5);
+			\draw[line width=0.8pt,color=orange] (1.8,1.8) node {$\cdot(2) = $ Skalierung mit Faktor $2$};
+			\draw[line width=0.8pt,color=red] (0,2.7) node {$\cdot (-1) = 180 \degree$ Drehung};
+		\end{tikzpicture}
+	\end{center}
+
+	\paragraph{} Da gilt, dass: $i^2 = -1$ ist die Multiplikation einer reellen Zahl mit $i^2$ äquivalent zu einer $180$- Grad Drehung. Daraus lässt sich schließen, dass die Multiplikation mit $i$ einer $90$- Grad Drehung entspricht, da: $a \cdot i^2 = a \cdot i \cdot i; a\in\R$ und man davon ausgeht, dass $\cdot(i)$ beides mal dieselbe Transformation anwendet.
+	\\
+	\begin{center}
+		\begin{tikzpicture}[>=triangle 45]
+			\draw[->,line width=0.8pt] (-5.5,0) -- (5.7,0) node[above] {$Re(z)$};
+			\draw[->,line width=0.8pt] (0,-5.5) -- (0,5.7) node[right] {$Im(z)$};
+			\foreach  \x in {-5,...,-1,1,2,...,5}
+                \draw [line width=0.8pt] (\x,0.1) -- (\x,-0.1) node[below] {$\x$};
+            \foreach  \x in {-5,...,-1,1,2,...,5}
+                \draw [line width=0.8pt] (-0.1,\x) -- (0.1,\x) node[right] {$\x i$};
+			\draw[line width=0.8pt] (-0.2,-0.2) node {$O$};
+			\draw[->,line width=1.5pt,color=red] (0,0) -- (-3,0);
+			\draw[->,line width=1.5pt,color=red,dashed] (0,0) -- (3,0);
+			\draw[line width=1.3pt,color=red] (1.5,0.3) node {3};
+			\draw[line width=1.3pt,color=red] (-1.5,0.3) node {-3};
+			\draw[->,line width=1.5pt,color=red] (0,0) -- (0,-3);
+			\draw[->,line width=1.5pt,color=red] (0,0) -- (0,3);
+			\draw[line width=1.3pt,color=red] (-0.3,1.5) node {$3i$};
+			\draw[line width=1.3pt,color=red] (-0.4,-1.5) node {$-3i$};
+			\draw[->,color=red] (2.4,0) arc (0:90:2.4);
+			\draw[->,color=red] (0,2.4) arc (90:180:2.4);
+			\draw[line width=1.3pt,color=red] (1.9,2) node {$\cdot(i)$};
+			\draw[line width=1.3pt,color=red] (-1.9,2) node {$\cdot(i)$};
+			\draw[->,color=red] (2.4,0) arc (360:270:2.4);
+			\draw[->,color=red] (0,-2.4) arc (270:180:2.4);
+			\draw[line width=1.3pt,color=red] (1.9,-2) node {$\cdot(-i)$};
+			\draw[line width=1.3pt,color=red] (-1.9,-2) node {$\cdot(-i)$};
 		\end{tikzpicture}
 	\end{center}
